[package]
name = "irja"
version = "0.1.0"
edition = "2021"
authors = ["Artem Pechenyi <ap@unteleported.com>"]
description = "Irja is Rust in Ukrainian. Translated programming language"

[lib]
proc-macro = true


[dependencies]
quote = "1.0.26"
syn = { version = "1.0.109", features = ["full", "extra-traits"] }
proc-macro2 = "1.0.52"
phf = { version = "0.11", features = ["macros"] }

